--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="stylesheet" href="css/main.css">
       <link rel="stylesheet" href="css/reset.css">
-      <title>Document</title>
+      <title>Vader 人生</title>
  </head>
  <body>
 <!-- menu為我們的左側選單框架 -->
@@ -20,8 +20,8 @@
     </div>
        <div class="list"><ul>
         <li>Home</li>
-        <li>(JS)打地鼠</li>
-        <li>(JQ)你猜猜</li>
+        <a href="js/%E6%89%93%E5%9C%B0%E9%BC%A0.html"><li>(JS)打地鼠</li></a>
+        <a href="JQ/jq.html"><li>(JQ)表單驗證</li></a>
         <li>(PHP)假官網</li>
     </ul></div>
         
@@ -38,7 +38,7 @@
         
      <div class="news">
      <div class="newsword">
-      <div>最新文章</div>
+      <div>經歷</div>
       <ul>
         <li>文章1</li>
         <li>文章1</li>
